# stickerz

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README-ru.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/skills/diagnose-generation/: SKILL.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: deploy.yml  security.yml
demo/: publish_telegraph.py
docker/: Dockerfile
docs/: index.md
docs/development/: DEVELOPMENT_STANDARD.md
docs/operations/: CAPACITY-ru.md  CAPACITY.md
docs/ops/: DEPLOY.md
scripts/: ab_compare.py  publish_folder.py  seed_kate.py
src/sticker_service/: __init__.py  bot.py  cli.py  config.py  fsm_storage.py
src/sticker_service/db/: __init__.py  models.py  repository.py
src/sticker_service/handlers/: __init__.py  admin.py  apply.py  errors.py  flow.py  middleware.py  report.py  start.py  upload.py
src/sticker_service/maintenance/: __init__.py  loop.py  seed_kate.py
src/sticker_service/observability/: __init__.py  sentry.py
src/sticker_service/services/: __init__.py  analytics.py  approvals.py  budget.py  charts.py  cost.py  metrics.py  moderation.py  modes.py  orchestrator.py  photo_check.py  pricing.py  strikes.py
src/sticker_service/services/canonical/: __init__.py  engine.py  gate.py  loader.py  schema.py
src/sticker_service/services/canonical/styles/: disney.yaml  fashion_illustration.yaml  minecraft.yaml  pixar.yaml  soft_anime.yaml  watercolor.yaml  webtoon.yaml
src/sticker_service/services/models/: __init__.py  base.py  errors.py  factory.py  gemini.py  gpt.py  mock.py
src/sticker_service/services/postprocess/: __init__.py  bundle.py  caption.py  cover.py  preview.py  slice_stickers.py  watermark.py  whatsapp.py
src/sticker_service/services/publish/: __init__.py  naming.py  publisher.py
src/sticker_service/services/stickers/: __init__.py  caption_check.py  emoji.py  generate.py  meme_pool.json  meme_pool.py  refresh_memes.py  sets.py  upload.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_admin_users.py  test_alpha.py  test_analytics.py  test_approvals.py  test_bot.py  test_canonical_engine.py  test_caption_check.py  test_charts.py  test_config.py  test_cost.py  test_db.py  test_emoji.py  test_flow.py  test_fsm_storage.py  test_group_greeting.py  test_ladder.py  test_maintenance_loop.py  test_meme_pool.py  test_metrics.py  test_model_errors.py  test_models.py  test_moderation.py  test_modes.py  test_orchestrator.py  test_photo_check.py  test_postprocess.py  test_preview.py  test_pricing.py  test_publish.py  test_refresh_memes.py  test_refund.py  test_sentry.py  test_start.py  test_sticker_sheet.py  test_strikes.py  test_styles.py  test_upload.py  test_watermark.py  test_whatsapp.py  test_whitelist.py
