[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sticker_service"
version = "0.3.0"
description = "Telegram bot that turns a photo into a recognizable drawn-character sticker pack with Russian captions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sergey Khlebnikov", email = "you@example.com" }]
keywords = ["telegram", "stickers", "ai", "image-generation", "aiogram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sentry-sdk>=2.62.0",
    "aiogram>=3.13",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "pillow>=10.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "redis>=5.0",
]

[project.optional-dependencies]
# Provider SDKs are optional: the model layer is config-driven and mocks in
# tests (§15.1), so core install + CI stay light and offline-friendly.
models = [
    "google-genai>=0.3",
    "openai>=2.41.1",
]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "ruff>=0.15.17",
    "pyright>=1.1.410",
    "bandit>=1.7",
    "pip-audit>=2.10.1",
    "pre-commit>=3.7",
    "commitizen>=3.27",
]

[project.urls]
Homepage = "https://github.com/hleserg/stickerz"
Repository = "https://github.com/hleserg/stickerz"
Issues = "https://github.com/hleserg/stickerz/issues"

[project.scripts]
sticker_service = "sticker_service.cli:main"

[tool.uv]
# aiogram 3.28.2 (latest) caps aiohttp <3.14 while 3.13.x carries two open
# CVEs (2026-34993, 2026-47265; both fixed in 3.14.0). Owner-approved
# override (2026-06-12): force the patched line until aiogram lifts the cap —
# then DELETE this override.
override-dependencies = ["aiohttp>=3.14.0,<3.15"]

[tool.hatch.build.targets.wheel]
packages = ["src/sticker_service"]

[tool.hatch.build.targets.wheel.force-include]
"src/sticker_service/assets/DejaVuSans-Bold.ttf" = "sticker_service/assets/DejaVuSans-Bold.ttf"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["sticker_service"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.12"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "--strict-markers"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests (may touch external services)",
    "e2e: end-to-end tests",
]

[tool.coverage.run]
branch = true
source = ["src/sticker_service"]
omit = [
    "src/sticker_service/cli.py",
    "src/sticker_service/bot.py",
    "src/sticker_service/handlers/flow.py",
    "src/sticker_service/handlers/admin.py",
    "src/sticker_service/handlers/report.py",
    "src/sticker_service/handlers/errors.py",
    "src/sticker_service/handlers/apply.py",
    "src/sticker_service/maintenance/seed_kate.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = ["pyproject.toml:version", "src/sticker_service/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
